  a file dialog was open, but the mouse moved over drawarea, SDL accumulated the
  events and fired all at once when the dialog was closed. Coordinates are read
  from DrawArea and passed to Controls in main loop instead.
- Clicking on Picture/Clear clears MainImage to key color.
- Clicking on CEL/Release frees up CELImage. This operation is not UNDOable!

2023.03.09
- Submenu opens when hovering mouse on menu. Moving to another menu or outside
  the menu bar or submenu hides the submenu.
- Moving the mouse over the submenu moves the selection.

2023.03.08
- Using mouse wheel over the palette colors in PaletteEditor switches banks.
- Menu appears in the top row of the screen.

2023.03.07
- Moved the vertical slider's mouse wheel event to the vcc_SliderLogic unit, where it belongs.
- Added wheel event to the horizontal slider too.

2023.03.06
- You can change the vertical slider with mouse wheel.
- The vertical slider in PaletteEditor switches banks.
- Using the mouse wheel over the PaletteEditor no longer zooms DrawArea.

2023.03.03
- CreateRelease.bat added.
- KeyMapping is saved back to INI file.
- When in PaletteEditor, right clicking on DrawArea exits PaletteEditor.
- Added a vertical slider to PaletteEditor, it will switch the palette banks. (Not yet doing it.)

2023.03.02
- Added sliders to PaletteEditor. They are not changing anything yet.
- Sliders now change the currently selected colors RGB channels.
- When invoking PaletteEditor, the sliders are set to the selected color's RGB values.
- Clicking on the colors on the PaletteEditor changes the current color and sets
  the sliders accordingly.
- After invoking PaletteEditor, clicking on the draw area selects current color.

2023.03.01
- Removed string data part from Messaging subsystem.

2023.02.28
- New tool: PickColor (PICKCOL). When activated, click anywhere on the draw area
  to pick a color. That color is put on the MessageQueue in a MSG_PICKEDCOLOR message.