@@ -21,8 +21,8 @@ GetColor=58
 
 [DrawArea]
 Zoom=3
-ZoomLeft=-15
-ZoomTop=-37
+ZoomLeft=4
+ZoomTop=-2
 
 [BasicControls]
 Tool0=DRAW
