@@ -15,20 +15,18 @@
       <Unit>
         <Filename Value="BDPMainUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="133"/>
-        <CursorPos X="61" Y="164"/>
+        <TopLine Value="147"/>
+        <CursorPos X="62" Y="171"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPSharedUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="9"/>
         <TopLine Value="45"/>
-        <CursorPos X="12" Y="84"/>
-        <FoldState Value=" T3k80W4 pk0kg0L1 PUN0K"/>
+        <CursorPos X="17" Y="86"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
@@ -47,15 +45,15 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="78"/>
         <CursorPos X="10" Y="101"/>
-        <UsageCount Value="195"/>
+        <UsageCount Value="196"/>
       </Unit>
       <Unit>
         <Filename Value="BDPControlsUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="3"/>
-        <TopLine Value="288"/>
-        <CursorPos Y="307"/>
-        <UsageCount Value="193"/>
+        <EditorIndex Value="4"/>
+        <TopLine Value="287"/>
+        <CursorPos Y="326"/>
+        <UsageCount Value="194"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -64,23 +62,24 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="177"/>
         <CursorPos X="36" Y="379"/>
-        <UsageCount Value="185"/>
+        <UsageCount Value="186"/>
       </Unit>
       <Unit>
         <Filename Value="BDPImageUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="3"/>
         <TopLine Value="935"/>
         <CursorPos Y="962"/>
-        <UsageCount Value="184"/>
+        <UsageCount Value="185"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPDrawAreaUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="6"/>
-        <CursorPos X="15" Y="41"/>
-        <UsageCount Value="176"/>
+        <EditorIndex Value="8"/>
+        <TopLine Value="107"/>
+        <CursorPos Y="121"/>
+        <UsageCount Value="177"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -89,7 +88,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="127"/>
         <CursorPos X="3" Y="149"/>
-        <UsageCount Value="174"/>
+        <UsageCount Value="175"/>
       </Unit>
       <Unit>
         <Filename Value="BDPMessageUnit.pas"/>
@@ -97,7 +96,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="33"/>
         <CursorPos Y="66"/>
-        <UsageCount Value="163"/>
+        <UsageCount Value="164"/>
       </Unit>
       <Unit>
         <Filename Value="BDPCursorUnit.pas"/>
@@ -105,16 +104,17 @@
         <EditorIndex Value="-1"/>
         <CursorPos Y="21"/>
         <FoldState Value=" T7AC2 T3K0{yp"/>
-        <UsageCount Value="162"/>
+        <UsageCount Value="163"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPToolsUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="1070"/>
-        <CursorPos Y="1087"/>
-        <UsageCount Value="160"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="1004"/>
+        <CursorPos Y="1036"/>
+        <UsageCount Value="161"/>
+        <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPInksUnit.pas"/>
@@ -122,7 +122,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="214"/>
         <CursorPos Y="258"/>
-        <UsageCount Value="159"/>
+        <UsageCount Value="160"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
@@ -131,7 +131,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="119"/>
         <CursorPos Y="163"/>
-        <UsageCount Value="147"/>
+        <UsageCount Value="148"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
@@ -140,14 +140,14 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="3"/>
         <CursorPos Y="37"/>
-        <UsageCount Value="140"/>
+        <UsageCount Value="141"/>
       </Unit>
       <Unit>
         <Filename Value="BDPSplashScreenUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <CursorPos Y="52"/>
-        <UsageCount Value="123"/>
+        <UsageCount Value="124"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
@@ -155,7 +155,7 @@
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="26" Y="51"/>
-        <UsageCount Value="111"/>
+        <UsageCount Value="112"/>
       </Unit>
       <Unit>
         <Filename Value="BDPUndoUnit.pas"/>
@@ -163,15 +163,16 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="132"/>
         <CursorPos Y="273"/>
-        <UsageCount Value="101"/>
+        <UsageCount Value="102"/>
       </Unit>
       <Unit>
         <Filename Value="BDPPaletteEditorUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="4"/>
-        <TopLine Value="123"/>
-        <CursorPos Y="162"/>
-        <UsageCount Value="74"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="5"/>
+        <TopLine Value="4"/>
+        <CursorPos X="72" Y="8"/>
+        <UsageCount Value="75"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -179,16 +180,15 @@
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <CursorPos Y="54"/>
-        <UsageCount Value="66"/>
+        <UsageCount Value="67"/>
       </Unit>
       <Unit>
         <Filename Value="BDPMenuUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="5"/>
-        <TopLine Value="186"/>
-        <CursorPos Y="218"/>
-        <FoldState Value=" T7CBI1 PDOC T3iE0I916 Pk0mP0@"/>
-        <UsageCount Value="39"/>
+        <EditorIndex Value="7"/>
+        <TopLine Value="146"/>
+        <CursorPos X="20" Y="116"/>
+        <UsageCount Value="40"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -240,10 +240,11 @@
       </Unit>
       <Unit>
         <Filename Value="units\MKMouse2.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="165"/>
-        <CursorPos X="34" Y="187"/>
+        <EditorIndex Value="6"/>
+        <TopLine Value="327"/>
+        <CursorPos Y="336"/>
         <UsageCount Value="20"/>
+        <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="units\vcc_ButtonLogic2.pas"/>
@@ -398,114 +399,126 @@
         <UsageCount Value="9"/>
       </Unit>
     </Units>
-    <JumpHistory HistoryIndex="26">
+    <JumpHistory HistoryIndex="29">
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="930" TopLine="907"/>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1038" TopLine="1001"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="931" TopLine="907"/>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1009" TopLine="1001"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="941" TopLine="907"/>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1041" TopLine="1004"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="942" TopLine="907"/>
+        <Filename Value="BDPDrawAreaUnit.pas"/>
+        <Caret Line="121" TopLine="107"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="943" TopLine="907"/>
+        <Filename Value="units\MKMouse2.pas"/>
+        <Caret Line="225" TopLine="189"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="944" TopLine="907"/>
+        <Filename Value="BDPControlsUnit.pas"/>
+        <Caret Line="326" TopLine="41"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="948" TopLine="911"/>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1036" TopLine="1004"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="949" TopLine="912"/>
+        <Filename Value="BDPMainUnit.pas"/>
+        <Caret Line="172" TopLine="147"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="950" TopLine="913"/>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1036" TopLine="1004"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="951" TopLine="914"/>
+        <Filename Value="BDPMainUnit.pas"/>
+        <Caret Line="172" TopLine="147"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="952" TopLine="915"/>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1036" TopLine="1004"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="961" TopLine="931"/>
+        <Filename Value="BDPMainUnit.pas"/>
+        <Caret Line="172" TopLine="147"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="962" TopLine="931"/>
+        <Filename Value="units\MKMouse2.pas"/>
+        <Caret Line="66" Column="15" TopLine="43"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="964" TopLine="931"/>
+        <Filename Value="BDPMainUnit.pas"/>
+        <Caret Line="172" TopLine="147"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="965" TopLine="931"/>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1036" TopLine="1004"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="966" TopLine="931"/>
+        <Filename Value="BDPMainUnit.pas"/>
+        <Caret Line="172" TopLine="147"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="968" TopLine="935"/>
+        <Filename Value="units\MKMouse2.pas"/>
+        <Caret Line="335" TopLine="327"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="969" TopLine="935"/>
+        <Filename Value="units\MKMouse2.pas"/>
+        <Caret Line="336" Column="15" TopLine="327"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="970" TopLine="935"/>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1036" TopLine="1004"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="971" TopLine="935"/>
+        <Filename Value="BDPMainUnit.pas"/>
+        <Caret Line="172" TopLine="147"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="972" TopLine="935"/>
+        <Filename Value="units\MKMouse2.pas"/>
+        <Caret Line="335" TopLine="327"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="973" TopLine="935"/>
+        <Filename Value="BDPControlsUnit.pas"/>
+        <Caret Line="302" TopLine="287"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="974" TopLine="935"/>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1036" TopLine="1004"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="971" TopLine="935"/>
+        <Filename Value="BDPControlsUnit.pas"/>
+        <Caret Line="303" TopLine="287"/>
       </Position>
       <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="976" Column="24" TopLine="935"/>
+        <Filename Value="BDPControlsUnit.pas"/>
+        <Caret Line="326" TopLine="287"/>
       </Position>
       <Position>
-        <Filename Value="BDPSharedUnit.pas"/>
-        <Caret Line="67" Column="9" TopLine="61"/>
+        <Filename Value="BDPControlsUnit.pas"/>
+        <Caret Line="303" TopLine="287"/>
       </Position>
       <Position>
-        <Filename Value="BDPSharedUnit.pas"/>
-        <Caret Line="68" Column="14" TopLine="45"/>
+        <Filename Value="BDPMainUnit.pas"/>
+        <Caret Line="172" TopLine="147"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPControlsUnit.pas"/>
+        <Caret Line="303" TopLine="287"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPControlsUnit.pas"/>
+        <Caret Line="326" TopLine="287"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1036" TopLine="1004"/>
       </Position>
     </JumpHistory>
     <RunParams>
